--- a/ᏎᎷ.mw
+++ b/ᏎᎷ.mw
@@ -79,27 +79,26 @@
 ᎭᏫᎾᏗᏢ 2005, ᏅᎠᏯᏍᏗ ᎾᎥᎢ ᎯᎠ [[USDA]] [[United States Forest Service|ᎠᏙᎯ ᎢᎾᎨ ᎾᏛᏁᎸ]] ᎤᏓᏎᎮᎸ Ꮎ ᎯᎠ ᎤᎵᏌᎳᏙᏗ ᎭᏫᎾᏗᏢ ᏎᎷ ᏗᎦᎶᎪᏗ 500 1,000 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ ᎭᏫᎾᏗᏢ ᎯᎠ southeastern ᎠᏫᏒᏗ ᎧᏃᎮᎭ contributed ᎯᎠ ᎠᏓᏯᏍᏗ freshwater [[mussel|ᏓᎫᎾ]], ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏙᎯᏳ ᎤᏁᏟᏴᏌᏘ environmental ᏗᎦᏁᏟᏴᏍᏗ.<ref>[http://www.srs.fs.usda.gov/about/newsrelease/nr_2005-06-06-mussels.htm]</ref>
 
 == ᏗᎦᎶᎪᏗ ==
-ᏎᎷ ᎨᏒᎢ ᏂᎬᎢ ᏄᏍᏛ ᎠᎩᏍᏗ ᏂᎦᏅᎯᏒ ᎯᎠ ᎡᎶᎯ, ᎠᎴ ᎡᏆ ᎢᎨᏍᏙᏗ ᏄᏓᎨᏒ ᏎᎷ ᎨᏒᎢ ᎠᏛᎯᏍᏔᏅ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ ᎬᎾᏬᏍᎬ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᎤᏛᏒ ᎤᎦᏔ. ᎾᎯᏳᎢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᏛᎯᏍᏗ ᎾᎥᏂᎨᏍᏗ ᎠᏰᎵ ᎢᏴ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ, ᏐᎢ ᎦᏚᎢ ᎠᏛᎯᏍᏗᏍᎬ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎠᎴ ᏥᏄᏍᏗ ᏂᎬᎢ ᏥᏄᏍᏗ [[China|ᎠᎦᎾᏫᏗᏍᎩ]], [[Brazil|ᏆᏏᎵᎢ]], [[France|ᎦᎸᏥᏱ]], [[Indonesia]], ᎠᎴ [[South Africa|ᏧᎦᎾᏮ ᎬᎿᎦᏍᏛ]]. ᏗᏍᏆᎸᏙᏗ ᎠᏛᎯᏍᏙᏗ ᏥᏄᏍᏛᎩ ᎦᏬᎯᎸᏙᏗ 600 ᎢᏳᏆᏗᏅᏓ [[metric ton|ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎢᏯᏛᏂ]]ᎭᏫᎾᏗᏢ 2003 – ᎣᏍᏛ ᎠᏍᏓᏩᏛᏍᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ [[rice|ᏗᎵᏊ]] ᎠᎴ [[wheat|ᎤᏣᎴᏍᏗ]].  ᎭᏫᎾᏗᏢ 2004, ᎠᏍᏚᏗ 33 ᎢᏳᏆᏗᏅᏓ [[hectare]] ᏎᎷ ᎨᏒᎩ ᎦᎧᏅ ᏗᏍᏆᎸᏙᏗ, ᎬᏙᏗ ᎠᏛᎯᏍᏙᏗ ᏧᎬᏩᎶᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ $23 ᎯᏍᎩ.
+ᏎᎷ ᎨᏒᎢ ᏂᎬᎢ ᏄᏍᏛ ᎠᎩᏍᏗ ᏂᎦᏅᎯᏒ ᎯᎠ ᎡᎶᎯ, ᎠᎴ ᎡᏆ ᎢᎨᏍᏙᏗ ᏄᏓᎨᏒ ᏎᎷ ᎨᏒᎢ ᎠᏛᎯᏍᏔᏅ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ ᎬᎾᏬᏍᎬ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏐᎢ ᎤᏛᏒ ᎤᎦᏔ. ᎾᎯᏳᎢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᏛᎯᏍᏗ ᎾᎥᏂᎨᏍᏗ ᎠᏰᎵ ᎢᏴ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ, ᏐᎢ ᎦᏚᎢ ᎠᏛᎯᏍᏗᏍᎬ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎠᎴ ᏥᏄᏍᏗ ᏂᎬᎢ ᏥᏄᏍᏗ [[China|ᎠᎦᎾᏫᏗᏍᎩ]], [[Brazil|ᏆᏏᎵᎢ]], [[France|ᎦᎸᏥᏱ]], [[Indonesia]], ᎠᎴ [[South Africa|ᏧᎦᎾᏮ ᎬᎿᎦᏍᏛ]]. ᏗᏍᏆᎸᏙᏗ ᎠᏛᎯᏍᏙᏗ ᏥᏄᏍᏛᎩ ᎦᏬᎯᎸᏙᏗ 600 ᎢᏳᏆᏗᏅᏓ [[metric ton|ᎠᏟᎶᏍᏗ ᎦᏙᎯ ᎢᏯᏛᏂ]] ᎭᏫᎾᏗᏢ 2003 – ᎣᏍᏛ ᎠᏍᏓᏩᏛᏍᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ [[rice|ᏗᎵᏊ]] ᎠᎴ [[wheat|ᎤᏣᎴᏍᏗ]].  ᎭᏫᎾᏗᏢ 2004, ᎠᏍᏚᏗ 33 ᎢᏳᏆᏗᏅᏓ [[hectare]] ᏎᎷ ᎨᏒᎩ ᎦᎧᏅ ᏗᏍᏆᎸᏙᏗ, ᎬᏙᏗ ᎠᏛᎯᏍᏙᏗ ᏧᎬᏩᎶᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ $23 ᎯᏍᎩ.
 
-ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᎨᏒᎢ ᎤᏴᏢ-ᎦᎵᏓᏍᏛ, ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎷᏪᎢ ᎡᎶᎯ ᎠᏍᏓᏅᏅ ᏎᎷ ᎠᏎ ᎾᏍᏋ ᎦᎧᏅ ᎭᏫᎾᏗᏢ ᎯᎠ [[spring (season)|ᎠᎹ ᎦᏄᎪᎬ]]. Ꮝ ᎤᎾᏍᏕᏢ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎨᏒᎢ ᏂᎦᎥᏊ ᎤᏅᏬᏓ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎦᎪᏘ ᎨᏒᎢ ᎦᏛᎢ ᎾᎿ ᎦᏙᎯ ᎤᎯᏌᏛ.  ᏥᏄᏍᏗ [[C4 plant|C4 ᎦᎪᏘ]] (ᎦᎪᏘ Ꮎ ᎬᏔᏂᏓᏍᏗ C4 photosynthesis), ᏎᎷ ᎨᏒᎢ ᎤᎪᏗᏗ ᎤᏟ ᎢᎦᎢ ᎠᎹ-ᎠᏏᎾᏍᏛ ᏠᎨᏏ ᎠᏫᏒ ᎬᎾᏬᏍᎬ [[C3 plant|C3 ᎦᎪᏘ]]ᎾᏍᎩᏯᎢ ᎯᎠ ᎤᏍᏗ ᎤᏛᏒ ᎤᎦᏔ, ᎦᎪᏘ ᎠᎴ soybeans.  ᏎᎷ ᎨᏒᎢ ᎤᎪᏗᏗ ᎤᏁᏟᏴᏌᏘ ᏓᏣᏁᎬ ᎾᎾᎢ ᎯᎠ ᎢᏳᏩᎪᏗ ᏏᎵᎩ ᏄᏍᏗᏓᏅ, ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎠᏂᏥᎸᏍᎩ ᎠᎴ ᎠᏛᏅᎢᏍᏔᏃᏅ ᎾᏍᎩᎾᎢ pollination. ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎣᏍᏛ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ ᏥᏄᏍᏛᎩ ᎧᏃᎮᎸᎯ predicted ᎢᏳᏃ ᎯᎠ ᏎᎷ ᏥᏄᏍᏛᎩ "ᎧᏂᎩᏂ-ᎦᎸᎳᏗ ᎾᎥᎢ ᎯᎠ [[Independence Day (United States)|ᏅᎩᏁ  ᎫᏰᏉᏂ]]", ᎾᏍᎩ ᎤᏁᎳᎩ ᎪᎯᏊ ᎢᏴ ᏥᎩ [[hybrid|ᏧᏠᎯᏍᏗ]]ᏂᎦᎥᏊ ᎦᎶᏒᏍᏔᏅ ᎪᎯ ᎤᏛᏏᏗᏒ ᏓᎬᏩᎶᏛ. ᏎᎷ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ [[silage]] ᎨᏒᎢ harvested ᎾᎯᏳᎢ ᎯᎠ ᎦᎪᏘ ᎨᏒᎢ ᎢᏤ ᎢᏳᏍᏗ ᎠᎴ ᎯᎠ ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᎠᏛᏍᎩ.  ᎤᎦᎾᏍᏛ ᏎᎷ ᎨᏒᎢ harvested ᎭᏫᎾᏗᏢ ᎯᎠ "ᎤᏅᏗ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ", ᎤᎶᏐᏅ pollination ᎠᎴ ᎤᏓᎷᎸ ᏗᏍᏓᎦᏯᏙᏗ ᎠᏰᎲ ᎪᏢᎯ ᎢᎬᏁᎸᎯ, ᎠᏰᎵ ᎣᏂᏱᏳ ᎪᎨᏱ ᎠᎴ ᎢᎬᏱ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-ᎤᎳᎪᎲᏍᏗ.  ᏠᎨᏏ ᏎᎷ ᎨᏒᎢ ᎠᎦᏍᎦᏂ ᎭᏫᎾᏗᏢ ᎯᎠ ᏠᎨᏏ ᎤᏙᎯᏳ ᎣᏂᏱᏳ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᎪᎲᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎧᎵᏬᎯ ᎤᎧᏲᏗ ᎯᎠ ᎤᏛᏒ ᎤᎦᏔ, ᎠᎴ ᎠᎾᏍᎬᏘ, ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᏱᏓᏟᎶᏍᏔᏅ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᏋ harvested ᎢᏳᏩᎪᏗ [[winter|ᎪᎳ]] ᎠᎴ ᎢᏧᎳᎭ ᎢᎬᏱ ᎠᎹ ᎦᏄᎪᎬ. ᎯᎠ ᏭᎵᏍᎨᏗᏴ ᏰᎵᏊ ᎦᏙᎯ ᎤᎯᏌᏛ ᎨᏒᎢ ᎤᎾᏓᏎᎮᎸᎩ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎢᎦᏛᎭ [[ᎬᎿᎦᏍᏛ]], ᎭᏢᏃ ᎠᏍᏆᎵᏍᏗ [[drought|ᏓᏣᏁᎬ]] ᏂᎦᏛ ᎤᏠᏱᎭ ᏂᏕᎬᏂᏏᏍᎬ [[famine|ᎠᎪᏄᎳ]] ᎾᎥᎢ causing ᏎᎷ ᏠᎨᏏ ᎠᏫᏒ ᎤᏄᎸᎲᏍᎩ.
+ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᎨᏒᎢ ᎤᏴᏢ-ᎦᎵᏓᏍᏛ, ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎷᏪᎢ ᎡᎶᎯ ᎠᏍᏓᏅᏅ ᏎᎷ ᎠᏎ ᎾᏍᏋ ᎦᎧᏅ ᎭᏫᎾᏗᏢ ᎯᎠ [[spring (season)|ᎠᎹ ᎦᏄᎪᎬ]]. Ꮝ ᎤᎾᏍᏕᏢ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎨᏒᎢ ᏂᎦᎥᏊ ᎤᏅᏬᏓ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎦᎪᏘ ᎨᏒᎢ ᎦᏛᎢ ᎾᎿ ᎦᏙᎯ ᎤᎯᏌᏛ.  ᏥᏄᏍᏗ [[C4 plant|C4 ᎦᎪᏘ]] (ᎦᎪᏘ Ꮎ ᎬᏔᏂᏓᏍᏗ C4 photosynthesis), ᏎᎷ ᎨᏒᎢ ᎤᎪᏗᏗ ᎤᏟ ᎢᎦᎢ ᎠᎹ-ᎠᏏᎾᏍᏛ ᏠᎨᏏ ᎠᏫᏒ ᎬᎾᏬᏍᎬ [[C3 plant|C3 ᎦᎪᏘ]] ᎾᏍᎩᏯᎢ ᎯᎠ ᎤᏍᏗ ᎤᏛᏒ ᎤᎦᏔ, ᎦᎪᏘ ᎠᎴ soybeans.  ᏎᎷ ᎨᏒᎢ ᎤᎪᏗᏗ ᎤᏁᏟᏴᏌᏘ ᏓᏣᏁᎬ ᎾᎾᎢ ᎯᎠ ᎢᏳᏩᎪᏗ ᏏᎵᎩ ᏄᏍᏗᏓᏅ, ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎠᏂᏥᎸᏍᎩ ᎠᎴ ᎠᏛᏅᎢᏍᏔᏃᏅ ᎾᏍᎩᎾᎢ pollination. ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]], ᎣᏍᏛ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ ᏥᏄᏍᏛᎩ ᎧᏃᎮᎸᎯ predicted ᎢᏳᏃ ᎯᎠ ᏎᎷ ᏥᏄᏍᏛᎩ "ᎧᏂᎩᏂ-ᎦᎸᎳᏗ ᎾᎥᎢ ᎯᎠ [[Independence Day (United States)|ᏅᎩᏁ  ᎫᏰᏉᏂ]]", ᎾᏍᎩ ᎤᏁᎳᎩ ᎪᎯᏊ ᎢᏴ ᏥᎩ [[hybrid|ᏧᏠᎯᏍᏗ]] ᏂᎦᎥᏊ ᎦᎶᏒᏍᏔᏅ ᎪᎯ ᎤᏛᏏᏗᏒ ᏓᎬᏩᎶᏛ. ᏎᎷ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ [[silage]] ᎨᏒᎢ harvested ᎾᎯᏳᎢ ᎯᎠ ᎦᎪᏘ ᎨᏒᎢ ᎢᏤ ᎢᏳᏍᏗ ᎠᎴ ᎯᎠ ᎤᏓᏔᏅ ᎠᎩᏍᏗ ᎠᏛᏍᎩ.  ᎤᎦᎾᏍᏛ ᏎᎷ ᎨᏒᎢ harvested ᎭᏫᎾᏗᏢ ᎯᎠ "ᎤᏅᏗ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ", ᎤᎶᏐᏅ pollination ᎠᎴ ᎤᏓᎷᎸ ᏗᏍᏓᎦᏯᏙᏗ ᎠᏰᎲ ᎪᏢᎯ ᎢᎬᏁᎸᎯ, ᎠᏰᎵ ᎣᏂᏱᏳ ᎪᎨᏱ ᎠᎴ ᎢᎬᏱ ᎠᏰᎵ ᏯᏛᎾ ᎠᎺᏉᎯ-ᎤᎳᎪᎲᏍᏗ.  ᏠᎨᏏ ᏎᎷ ᎨᏒᎢ ᎠᎦᏍᎦᏂ ᎭᏫᎾᏗᏢ ᎯᎠ ᏠᎨᏏ ᎤᏙᎯᏳ ᎣᏂᏱᏳ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᎪᎲᏍᏗ ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎧᎵᏬᎯ ᎤᎧᏲᏗ ᎯᎠ ᎤᏛᏒ ᎤᎦᏔ, ᎠᎴ ᎠᎾᏍᎬᏘ, ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᏱᏓᏟᎶᏍᏔᏅ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᏋ harvested ᎢᏳᏩᎪᏗ [[winter|ᎪᎳ]] ᎠᎴ ᎢᏧᎳᎭ ᎢᎬᏱ ᎠᎹ ᎦᏄᎪᎬ. ᎯᎠ ᏭᎵᏍᎨᏗᏴ ᏰᎵᏊ ᎦᏙᎯ ᎤᎯᏌᏛ ᎨᏒᎢ ᎤᎾᏓᏎᎮᎸᎩ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎢᎦᏛᎭ [[ᎬᎿᎦᏍᏛ]], ᎭᏢᏃ ᎠᏍᏆᎵᏍᏗ [[drought|ᏓᏣᏁᎬ]] ᏂᎦᏛ ᎤᏠᏱᎭ ᏂᏕᎬᏂᏏᏍᎬ [[famine|ᎠᎪᏄᎳ]] ᎾᎥᎢ causing ᏎᎷ ᏠᎨᏏ ᎠᏫᏒ ᎤᏄᎸᎲᏍᎩ.
 [[File:Field, corn, Liechtenstein, Mountains, Alps, Vaduz, sky, clouds, landscape.jpg|thumbnail|right|200px|ᏠᎨᏏ  ᏎᎷ ᎭᏫᎾᏗᏢ [[Liechtenstein]]]]
 
-ᏎᎷ ᏥᏄᏍᏛᎩ ᎦᎧᏅ ᎾᎥᎢ ᎯᎠ [[Native American (Americas)|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]]ᎭᏫᎾᏗᏢ ᏗᎦᏚᏏ, ᎭᏫᎾᏗᏢ ᏂᎦᏛ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎾᏅᏛ ᎢᎦᏛ ᏥᏄᏍᏗ ᎯᎠ [[Three Sisters (agriculture)|ᏦᎢ ᎠᎾᏓᎸ]]: [[bean|tuya]]ᎬᏔᏅᎯ ᎯᎠ ᏎᎷ ᎦᎪᏘ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏕᎸᏗ, ᎠᎴ [[Squash (fruit)|ᏍᏆᏏ]] ᎠᏓᏁᎳᏅ ᎦᏙᎯ ᎫᏢᏗ ᎠᎴᏫᏍᏙᏗ ᎫᏢᎥᏍᎬ. ᎪᎯ ᎢᎬᎾᏗ ᏥᏄᏍᏛᎩ ᏅᎪᏢᎯᏌᏅ ᎾᎥᎢ ᏏᏴᏫ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎦᏚᏏ ᎠᏂᎧᏅᏍᎬ ᎭᏢᏃ ᎠᏂᏏᏴᏫᎭ ᎦᏚᏏ 60–120 cm (2–4 ft) ᏧᎦᎴᏅᏓ ᏥᏄᏍᏛᎩ ᎦᎧᏅ ᎬᏙᏗ 3 ᎠᎴ 4 ᎤᎦᏔ, ᎢᎬᎾᏗ ᏙᎢ ᎬᏔᏅᎯ ᎾᎥᎢ ᎯᎠ ᎣᏪᏅᏒ ᏗᎦᎶᎪᏗ. ᎣᏂᏯᎨᏍᏙᏗ technique ᏥᏄᏍᏛᎩ ''ᎥᏓᏗᏎᎸᎯ ᏎᎷ'' ᎭᏢᏃ ᏗᎦᏚᏏ ᎨᏒᎩ ᎾᎿᏭᏅᎩ 40 ᎢᏯᏏᏔᏗᏍᏗ ᏧᎦᎴᏅᏓ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎢᏚᏳᎪᏛ, ᎠᎵᏍᎪᎸᏙᏗ ᏗᎦᎶᎪᏗ ᏗᏍᏆᎸᏙᏗ ᏗᎬᏩᎶᏒ ᎯᎠ ᏠᎨᏏ ᎭᏫᎾᏗᏢ ᏔᎵ ᏫᏂᏚᏳᎪᏛ. ᎭᏫᎾᏗᏢ ᎤᏟ ᎢᎦᎢ ᎠᏤᏫᏍᎬ ᏗᎦᏙᎯ ᎪᎯ ᏥᏄᏍᏛᎩ ᎠᏲᎶᎬ ᎠᎴ ᎤᎦᏔ ᎨᏒᎩ ᎦᎧᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᎭᏫᏂ 10–12 cm (4–5 ᎭᏫᎾᏗᏢ) ᎠᏍᏛᎩ ᎦᏓᎷᎦᏅ ᎠᏓᏂᏢᏗ ᎠᎹ. ᎪᎯᏊ ᎢᏴ ᏥᎩ technique ᏗᎦᎪᎯᏗ ᏎᎷ ᎭᏫᎾᏗᏢ ᏚᏓᏅ ᎦᏙ ᎤᏍᏗ ᎠᎵᏍᎪᎸᏙᏗ ᎾᏍᎩᎾᎢ ᏗᎦᎶᎪᏗ ᎾᎯᏳᎢ ᎯᎠ ᎦᎪᏘ ᎨᏒᎢ ᎠᏲᎵ. 
+ᏎᎷ ᏥᏄᏍᏛᎩ ᎦᎧᏅ ᎾᎥᎢ ᎯᎠ [[Native American (Americas)|ᎠᏴᏫᏯᎢ]] ᎭᏫᎾᏗᏢ ᏗᎦᏚᏏ, ᎭᏫᎾᏗᏢ ᏂᎦᏛ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎤᎾᏅᏛ ᎢᎦᏛ ᏥᏄᏍᏗ ᎯᎠ [[Three Sisters (agriculture)|ᏦᎢ ᎠᎾᏓᎸ]]: [[bean|ᏚᏯ]] ᎬᏔᏅᎯ ᎯᎠ ᏎᎷ ᎦᎪᏘ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏕᎸᏗ, ᎠᎴ [[Squash (fruit)|ᏍᏆᏏ]] ᎠᏓᏁᎳᏅ ᎦᏙᎯ ᎫᏢᏗ ᎠᎴᏫᏍᏙᏗ ᎫᏢᎥᏍᎬ. ᎪᎯ ᎢᎬᎾᏗ ᏥᏄᏍᏛᎩ ᏅᎪᏢᎯᏌᏅ ᎾᎥᎢ ᏏᏴᏫ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎦᏚᏏ ᎠᏂᎧᏅᏍᎬ ᎭᏢᏃ ᎠᏂᏏᏴᏫᎭ ᎦᏚᏏ 60–120 cm (2–4 ft) ᏧᎦᎴᏅᏓ ᏥᏄᏍᏛᎩ ᎦᎧᏅ ᎬᏙᏗ 3 ᎠᎴ 4 ᎤᎦᏔ, ᎢᎬᎾᏗ ᏙᎢ ᎬᏔᏅᎯ ᎾᎥᎢ ᎯᎠ ᎣᏪᏅᏒ ᏗᎦᎶᎪᏗ. ᎣᏂᏯᎨᏍᏙᏗ technique ᏥᏄᏍᏛᎩ ''ᎥᏓᏗᏎᎸᎯ ᏎᎷ'' ᎭᏢᏃ ᏗᎦᏚᏏ ᎨᏒᎩ ᎾᎿᏭᏅᎩ 40 ᎢᏯᏏᏔᏗᏍᏗ ᏧᎦᎴᏅᏓ ᎭᏫᎾᏗᏢ ᎠᏂᏏᏴᏫᎭ ᎢᏚᏳᎪᏛ, ᎠᎵᏍᎪᎸᏙᏗ ᏗᎦᎶᎪᏗ ᏗᏍᏆᎸᏙᏗ ᏗᎬᏩᎶᏒ ᎯᎠ ᏠᎨᏏ ᎭᏫᎾᏗᏢ ᏔᎵ ᏫᏂᏚᏳᎪᏛ. ᎭᏫᎾᏗᏢ ᎤᏟ ᎢᎦᎢ ᎠᏤᏫᏍᎬ ᏗᎦᏙᎯ ᎪᎯ ᏥᏄᏍᏛᎩ ᎠᏲᎶᎬ ᎠᎴ ᎤᎦᏔ ᎨᏒᎩ ᎦᎧᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᎭᏫᏂ 10–12 cm (4–5 ᎭᏫᎾᏗᏢ) ᎠᏍᏛᎩ ᎦᏓᎷᎦᏅ ᎠᏓᏂᏢᏗ ᎠᎹ. ᎪᎯᏊ ᎢᏴ ᏥᎩ technique ᏗᎦᎪᎯᏗ ᏎᎷ ᎭᏫᎾᏗᏢ ᏚᏓᏅ ᎦᏙ ᎤᏍᏗ ᎠᎵᏍᎪᎸᏙᏗ ᎾᏍᎩᎾᎢ ᏗᎦᎶᎪᏗ ᎾᎯᏳᎢ ᎯᎠ ᎦᎪᏘ ᎨᏒᎢ ᎠᏲᎵ. 
 
 [[File:Cornheap.jpg|200px|thumbnail|right|  ᏎᎷ ᎤᎪᏗᏗ ᏥᏄᏍᏗ ᎯᎠ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ ᏄᏍᏗᏓᏅ, [[India|ᎠᎹ ᎦᏄᎪᎬ]]]]
-ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ, ᏕᎦᎶᎨᏒ ᎠᎴ ᎢᏳᏓᎵᎭ ᎦᎧᏅ ᎭᏫᎾᏗᏢ ᏔᎵ-[[crop rotation|ᏠᎨᏏ ᎠᏫᏒ ᎠᏓᏠᎯᏍᏗ]] ᎬᏙᏗ [[Nitrogen fixation|nitrogen-ᎣᏍᏛ ᎢᎬᏁᏗ]] ᏠᎨᏏ ᎠᏫᏒ, ᎢᏳᏓᎵᎭ [[alfalfa|ᎦᎪᏘ]] ᎭᏫᎾᏗᏢ  ᎤᏁᏍᏓᎳ ᎦᎸᏙᏗ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ ᎠᎴ [[soybean]]ᎭᏫᎾᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎬᏙᏗ ᎦᏅᎯᏓᎨ ᎪᎨᏱ. ᏱᏓᏟᎶᏍᏔᏅ ᏦᎢᏁ ᏠᎨᏏ ᎠᏫᏒ, [[winter wheat|ᎪᎳ ᎤᏣᎴᏍᏗ]], ᎨᏒᎢ ᎦᏟᏌᏅᎯ ᎯᎠ ᎠᏓᏠᎯᏍᏗ. ᏕᎦᎶᎨᏒ ᎠᎴ ᎤᏠᏱᎭ ᎤᏄᎸᎲᏍᎩ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ, ᎾᏍᎩ ᎤᏁᎳᎩ [[no-till farming|Ꮭ-ᎩᎳ ᏓᎦᎶᎩᏍᎬ]] ᎨᏒᎢ kanquotsegi ᎭᏫᎾᏗᏢ ᎬᏙᏗ.  ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᏎᎷ cultivars ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᎴ [[ᎨᎾᏓ]] ᎠᎴ ᏧᏠᎯᏍᏗ.  ᎦᏬᎯᎸᏙᏗ ᎠᏰᎵ ᎢᏴ ᎯᎠ ᏎᎷ ᎤᏜᏅᏛ ᎦᎧᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎤᎭ ᏭᏪᏙᎢ [[genetically modified|genetically ᏧᏓᎴᎿᎢ]] ᎬᏗᏍᎬᎢ [[biotechnology]] ᎢᎦᏪᏍᏗ agronomic ᏫᏚᏳᎪᏛ ᎠᏚᎸᏓ ᎾᎥᎢ ᏗᏂᎶᎩᏍᎩ.
+ᎭᏫᎾᏗᏢ ᎤᏴᏢ ᎠᎺᎵᎨ, ᏕᎦᎶᎨᏒ ᎠᎴ ᎢᏳᏓᎵᎭ ᎦᎧᏅ ᎭᏫᎾᏗᏢ ᏔᎵ-[[crop rotation|ᏠᎨᏏ ᎠᏫᏒ ᎠᏓᏠᎯᏍᏗ]] ᎬᏙᏗ [[Nitrogen fixation|nitrogen-ᎣᏍᏛ ᎢᎬᏁᏗ]] ᏠᎨᏏ ᎠᏫᏒ, ᎢᏳᏓᎵᎭ [[alfalfa|ᎦᎪᏘ]] ᎭᏫᎾᏗᏢ  ᎤᏁᏍᏓᎳ ᎦᎸᏙᏗ ᏄᏍᏛ ᎤᏴᎸ ᎠᎴ ᎤᎦᎾᏮ ᎠᎴ [[soybean]] ᎭᏫᎾᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎬᏙᏗ ᎦᏅᎯᏓᎨ ᎪᎨᏱ. ᏱᏓᏟᎶᏍᏔᏅ ᏦᎢᏁ ᏠᎨᏏ ᎠᏫᏒ, [[winter wheat|ᎪᎳ ᎤᏣᎴᏍᏗ]], ᎨᏒᎢ ᎦᏟᏌᏅᎯ ᎯᎠ ᎠᏓᏠᎯᏍᏗ. ᏕᎦᎶᎨᏒ ᎠᎴ ᎤᏠᏱᎭ ᎤᏄᎸᎲᏍᎩ ᎠᏂᏏᏴᏫᎭ ᏑᏕᏘᏴᏓ, ᎾᏍᎩ ᎤᏁᎳᎩ [[no-till farming|Ꮭ-ᎩᎳ ᏓᎦᎶᎩᏍᎬ]] ᎨᏒᎢ ᎧᏁᏉᏤᎩ ᎭᏫᎾᏗᏢ ᎬᏙᏗ.  ᎾᎥᏂᎨᏍᏗ ᏂᎦᏛ ᏎᎷ cultivars ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᎴ [[ᎨᎾᏓ]] ᎠᎴ ᏧᏠᎯᏍᏗ.  ᎦᏬᎯᎸᏙᏗ ᎠᏰᎵ ᎢᏴ ᎯᎠ ᏎᎷ ᎤᏜᏅᏛ ᎦᎧᏅ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎤᎭ ᏭᏪᏙᎢ [[genetically modified|genetically ᏧᏓᎴᎿᎢ]] ᎬᏗᏍᎬᎢ [[biotechnology]] ᎢᎦᏪᏍᏗ agronomic ᏫᏚᏳᎪᏛ ᎠᏚᎸᏓ ᎾᎥᎢ ᏗᏂᎶᎩᏍᎩ.
 
-ᎤᏓᎷᎸ ᎬᏩᏚᏫᏛ [[World War II|ᎡᎶᎯ ᏓᏄᏩ ᎧᏬᎳᏕᏍᎬ]], ᎤᎪᏗᏗ ᏎᎷ ᏥᏄᏍᏛᎩ harvested ᎾᎥᎢ ᎤᏬᏰᏂ. ᎪᎯ ᎢᏳᏓᎵᎭ ᎤᏠᏯᏍᏔᏅ ᎡᏆ ᏗᏎᏍᏗ ᏧᎸᏫᏍᏓᏁᎯ ᎠᎴ ᎤᎾᎵᎪᏅᎯ ᎠᎾᏓᏟᏏᏍᎬ ᏂᏕᎦᎵᏍᏔᏂᏙᎲ. ᎢᎦᏛ ᏌᏊ- ᎠᎴ ᏔᎵ-ᎤᏓᏅᏅ ᎪᎱᏍᏗ ᎪᏢᏙᏗ pickers ᎨᏒᎩ ᎭᏫᎾᏗᏢ ᎬᏙᏗ ᎠᎴ ᎯᎠ ᏎᎷ [[combine harvester|ᎦᏟᏌᏅ]] ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏠᏯᏍᏔᏅᎯ ᎢᏳᏩᎪᏗ ᎤᎶᏐᏅ ᎯᎠ ᏓᏄᏩ. ᎾᎥᎢ ᎤᏬᏰᏂ ᎠᎴ ᎪᎱᏍᏗ ᎪᏢᏙᏗ picker, ᎯᎠ ᏂᎦᏛ ᎦᎴᏂ ᎨᏒᎢ harvested ᎦᏙ ᎤᏍᏗ ᎾᎯᏳᎢ ᎧᏁᎦ ᎢᏯᏛᏁᏗ ᏧᏓᎴᎿᎢ ᎠᏥᏰᎶᎲ ᏎᎷ sheller ᎠᎲᏍᏗ ᎯᎠ ᏚᎷᏍᏘ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᎴᏂ. ᏂᎦᏛ ᏗᎦᎴᏂ ᏎᎷ ᎨᏒᎩ ᎢᏳᏓᎵᎭ ᎠᏓᎾᏅ ᎭᏫᎾᏗᏢ ''ᏎᎷ ᎠᎵᏍᏕᎸᏗ'' ᎠᎴ ᎾᏍᎩ ᎯᎠ ᏂᎦᏛ ᏗᎦᎴᏂ ᎠᎴ ᏰᎵᏊ ᎤᏙᏢᏒ ᎾᏍᎩᎾᎢ ᎢᎦᏛ ganahlai ᎨᎳᏍᏙᏗ ᎬᏙᏗ. ᎢᎦᏛ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏕᎦᎶᎨᏒ ᎠᏓᎾᏅ ᏎᎷ ᎭᏫᎾᏗᏢ ᎪᎯ ᏄᏍᏛᎢ ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ ᎤᏯᏍᎦ ᎾᏍᎩ ᎾᏍᎩᎾᎢ ᎦᎾᏗᏅᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏣᏘᎾ-ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ ᎠᏥᏂᏱᏍᎬ ᎤᏟ ᎢᏲᏍᏛ ᏚᏂᎬᏩᎶᏔᏅ. ᎯᎠ ᎦᏟᏌᏅ ᎬᏙᏗ ᏎᎷ ᎠᏍᎪᎵ (ᎬᏙᏗ ᏗᎪᏍᏓᏱ ᎠᎴ ᎠᎧᏁᏍᏗ ᏗᏲᏛᎯ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎦᏗᏆᎴᏴᏍᏙᏗ) ᏗᏰᎳᏍᏗ ᎯᎠ ᎥᎢᏒᎢ ᎾᎥᏂᎨ ᎯᎠ alenvdidsv ᎠᎴ ᎾᎯᏳᎢ ᏧᏓᎴᎿᎢ ᎯᎠ ᎦᎴᏂ ᏎᎷ ᏂᏛᎴᏅᏓ ᎯᎠ ᎥᎢᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᎦᎴᏂ ᎠᎴ ᎤᏄᎶᏔᏅ ᎠᏴᏍᏗ ᎯᎠ ᎪᏢᏂᏓᏍᏗ. ᎯᎠ ᎦᏟᏌᏅ ᏧᏓᎴᎿᎢ ᎯᎠ ᎤᏄᎶᏔᏅ ᎠᎴ ᎯᎠ ᎠᏫᏗᏍᎩ, ᎤᏍᏆᏂᎪᏛ ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᏚᎷᏍᏘ.
+ᎤᏓᎷᎸ ᎬᏩᏚᏫᏛ [[World War II|ᎡᎶᎯ ᏓᏄᏩ ᎧᏬᎳᏕᏍᎬ]], ᎤᎪᏗᏗ ᏎᎷ ᏥᏄᏍᏛᎩ harvested ᎾᎥᎢ ᎤᏬᏰᏂ. ᎪᎯ ᎢᏳᏓᎵᎭ ᎤᏠᏯᏍᏔᏅ ᎡᏆ ᏗᏎᏍᏗ ᏧᎸᏫᏍᏓᏁᎯ ᎠᎴ ᎤᎾᎵᎪᏅᎯ ᎠᎾᏓᏟᏏᏍᎬ ᏂᏕᎦᎵᏍᏔᏂᏙᎲ. ᎢᎦᏛ ᏌᏊ- ᎠᎴ ᏔᎵ-ᎤᏓᏅᏅ ᎪᎱᏍᏗ ᎪᏢᏙᏗ pickers ᎨᏒᎩ ᎭᏫᎾᏗᏢ ᎬᏙᏗ ᎠᎴ ᎯᎠ ᏎᎷ [[combine harvester|ᎦᏟᏌᏅ]] ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏠᏯᏍᏔᏅᎯ ᎢᏳᏩᎪᏗ ᎤᎶᏐᏅ ᎯᎠ ᏓᏄᏩ. ᎾᎥᎢ ᎤᏬᏰᏂ ᎠᎴ ᎪᎱᏍᏗ ᎪᏢᏙᏗ picker, ᎯᎠ ᏂᎦᏛ ᎦᎴᏂ ᎨᏒᎢ harvested ᎦᏙ ᎤᏍᏗ ᎾᎯᏳᎢ ᎧᏁᎦ ᎢᏯᏛᏁᏗ ᏧᏓᎴᎿᎢ ᎠᏥᏰᎶᎲ ᏎᎷ sheller ᎠᎲᏍᏗ ᎯᎠ ᏚᎷᏍᏘ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᎴᏂ. ᏂᎦᏛ ᏗᎦᎴᏂ ᏎᎷ ᎨᏒᎩ ᎢᏳᏓᎵᎭ ᎠᏓᎾᏅ ᎭᏫᎾᏗᏢ ''ᏎᎷ ᎠᎵᏍᏕᎸᏗ'' ᎠᎴ ᎾᏍᎩ ᎯᎠ ᏂᎦᏛ ᏗᎦᎴᏂ ᎠᎴ ᏰᎵᏊ ᎤᏙᏢᏒ ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎦᏂᏝᎢ ᎨᎳᏍᏙᏗ ᎬᏙᏗ. ᎢᎦᏛ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏕᎦᎶᎨᏒ ᎠᏓᎾᏅ ᏎᎷ ᎭᏫᎾᏗᏢ ᎪᎯ ᏄᏍᏛᎢ ᎠᎴ ᎣᏂᏯᎨᏍᏙᏗ ᎤᏯᏍᎦ ᎾᏍᎩ ᎾᏍᎩᎾᎢ ᎦᎾᏗᏅᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏣᏘᎾ-ᎢᏳ ᎤᏕᏘᏴᏌᏗᏒ ᎠᏥᏂᏱᏍᎬ ᎤᏟ ᎢᏲᏍᏛ ᏚᏂᎬᏩᎶᏔᏅ. ᎯᎠ ᎦᏟᏌᏅ ᎬᏙᏗ ᏎᎷ ᎠᏍᎪᎵ (ᎬᏙᏗ ᏗᎪᏍᏓᏱ ᎠᎴ ᎠᎧᏁᏍᏗ ᏗᏲᏛᎯ ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎦᏗᏆᎴᏴᏍᏙᏗ) ᏗᏰᎳᏍᏗ ᎯᎠ ᎥᎢᏒᎢ ᎾᎥᏂᎨ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᎠᎴ ᎾᎯᏳᎢ ᏧᏓᎴᎿᎢ ᎯᎠ ᎦᎴᏂ ᏎᎷ ᏂᏛᎴᏅᏓ ᎯᎠ ᎥᎢᏒᎢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᎦᎴᏂ ᎠᎴ ᎤᏄᎶᏔᏅ ᎠᏴᏍᏗ ᎯᎠ ᎪᏢᏂᏓᏍᏗ. ᎯᎠ ᎦᏟᏌᏅ ᏧᏓᎴᎿᎢ ᎯᎠ ᎤᏄᎶᏔᏅ ᎠᎴ ᎯᎠ ᎠᏫᏗᏍᎩ, ᎤᏍᏆᏂᎪᏛ ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᏚᎷᏍᏘ.
 
 == Pellagra ==
-
 ᎯᎳᎪ ᎢᏳ ᏎᎷ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᏙᏯᏗᏢ ᎯᎠ ᎠᎺᎵᎨ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏍᏆᏂᎪᏒᏗ enthusiastically ᎾᎥᎢ ᏗᏂᎶᎩᏍᎩ ᏂᎬᎾᏓ ᎾᏍᎩᎾᎢ Ꮝ productivity.  ᏱᏂᎬᏛᎾ, ᏂᎬᎢ ᎠᎦᏎᏍᏙᏗ ᎢᎬᏁᏗ malnutrition ᏄᎵᏍᏛ ᏚᎴᏅ ᎾᎿᏇ ᏱᎾᎩ ᏎᎷ ᏥᏄᏍᏛᎩ ᎬᏂᎨᏒ ᏄᏩᏁᎸ. ᎪᎯ ᏥᏄᏍᏛᎩ ᎤᏍᏆᏂᎪᏗ ᎣᏂ ᏧᏩᎫᏛ ᎾᏍᎩ ᎯᎠ ᎢᏗᎦᎪᏘ malnutrition ᎨᏒᎩ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᎪᎲᎢ ᏄᎾᏛᏅ ᎯᎠ ᎢᎦᏛ ᏴᏩᏁᎬ ᎭᏫᎾᏗᏢ ᏄᎶᏒᏍᏛᎾ ᏂᏚᏍᏗᏓᏅ.{{fact}}
 
 ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᏭᎵᏱᎶᎸ ᎪᎷᏩᏛᏓ Ꮎ ᎯᎠ ᎢᎦᏛ ᏴᏩᏁᎬ ᎤᏕᎶᏆᎥ ᎦᏅᎯᏓ ᎢᏳ ᏥᎨᏒ ᎦᏟᏐᏗ [[alkali]]—ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏙᏢᏒ ᎦᏍᏚ ᏄᎾᏛᏅ ᎤᏴᏢ ᏴᏩᏁᎬ ᎠᎴ ᎪᏍᏚᎤᏁᎬ ([[calcium carbonate]]) ᏄᎾᏛᏅ [[Mesoamericans]]—ᏎᎷ ᎠᎵᏍᏓᏴᏗ ᏗᏓᏲᎯᏍᏗ ᎯᎠ B-vitamin [[niacin]], ᎯᎠ ᎦᎷᎶᎩ ᎦᏙ ᎤᏍᏗ ᏥᏄᏍᏛᎩ ᎯᎠ underlying ᏂᎬᏂᏏᏍᎬ ᎯᎠ ᏄᏍᏗᏓᏅ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[pellagra]]. ᎪᎯ alkali ᏧᎵᎬᏩᎳᏅᎯ ᎨᏒᎢ ᎤᎾᏅᏛ ᎾᎥᎢ Ꮝ Nahuatl (Aztec)-derived ᏚᏙᎥ: [[nixtamalization]].
 
-ᎾᏍᎩ ᏂᏗᎨᏒᎾ ᎯᎠ ᎦᎷᎶᎩ niacin, pellagra ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᎠᎦᏓᏅᏖᏗ ᎾᎥᎢ [[protein|ᏤᎵ]] ᎠᏂᎦᏲᎵ, ᏄᎵᏍᏔᏅ ᎯᎠ ᎢᎦᏛ ᎦᎷᎶᎩ ᏔᎵ ᏍᏚᎢᏍᏗ [[amino acid|amino ᏧᏄᏦᏍᏔ]]ᎭᏫᎾᏗᏢ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏎᎷ, [[lysine]] ᎠᎴ [[tryptophan]]. Nixtamalization ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ ᎧᏁᏉᎩ ᎯᎠ lysine ᎠᎴ tryptophan ᎣᏍᏛ ᎤᏓᏅᏘ ᏎᎷ ᎢᎦᏛ ᏫᎬᏍᏗ, ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏛ, ᎯᎠ ᎢᎦᏛ ᏴᏩᏁᎬ ᎠᏰᎲ ᎤᏕᎶᏆᎥ ᎦᏅᎯᏓ ᎢᏳ ᏥᎨᏒ ᎤᏘᏴᎯ ᎤᎾᏤᎵ ᎤᏲᏨᎯ ᏎᎷ ᎬᏙᏗ [[beans|ᏚᏯ]] ᎠᎴ ᏐᎢ ᏤᎵ ᏙᏧᏓᎴᏅ ᏯᏛᎿ ᏥᏄᏍᏗ [[amaranth]] ᎠᎴ [[chia]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎭᏫᏯ ᎠᎴ ᎠᏣᏗ, ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎣᏤᎵ ᎢᎬᏁᏗ ᎯᎠ ᎧᎵᏬᎯ ᎠᏍᏓᏅᏅ amino ᏧᏄᏦᏍᏔ ᎾᏍᎩᎾᎢ ᏄᎶᏒᏍᏛᎾ ᏤᎵ ᏧᏓᎴᎾᎢ.
+ᎾᏍᎩ ᏂᏗᎨᏒᎾ ᎯᎠ ᎦᎷᎶᎩ niacin, pellagra ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᎠᎦᏓᏅᏖᏗ ᎾᎥᎢ [[protein|ᏤᎵ]] ᎠᏂᎦᏲᎵ, ᏄᎵᏍᏔᏅ ᎯᎠ ᎢᎦᏛ ᎦᎷᎶᎩ ᏔᎵ ᏍᏚᎢᏍᏗ [[amino acid|amino ᏧᏄᏦᏍᏔ]] ᎭᏫᎾᏗᏢ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏎᎷ, [[lysine]] ᎠᎴ [[tryptophan]]. Nixtamalization ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ ᎧᏁᏉᎩ ᎯᎠ lysine ᎠᎴ tryptophan ᎣᏍᏛ ᎤᏓᏅᏘ ᏎᎷ ᎢᎦᏛ ᏫᎬᏍᏗ, ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᎨᏛ, ᎯᎠ ᎢᎦᏛ ᏴᏩᏁᎬ ᎠᏰᎲ ᎤᏕᎶᏆᎥ ᎦᏅᎯᏓ ᎢᏳ ᏥᎨᏒ ᎤᏘᏴᎯ ᎤᎾᏤᎵ ᎤᏲᏨᎯ ᏎᎷ ᎬᏙᏗ [[beans|ᏚᏯ]] ᎠᎴ ᏐᎢ ᏤᎵ ᏙᏧᏓᎴᏅ ᏯᏛᎿ ᏥᏄᏍᏗ [[amaranth]] ᎠᎴ [[chia]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎭᏫᏯ ᎠᎴ ᎠᏣᏗ, ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎣᏤᎵ ᎢᎬᏁᏗ ᎯᎠ ᎧᎵᏬᎯ ᎠᏍᏓᏅᏅ amino ᏧᏄᏦᏍᏔ ᎾᏍᎩᎾᎢ ᏄᎶᏒᏍᏛᎾ ᏤᎵ ᏧᏓᎴᎾᎢ.
 
-ᎣᏂ ᏧᏩᎫᏛ ᏎᎷ ᎠᏰᎲ ᏭᏪᏙᎢ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎾᎾᎯ ᎯᎠ ᎠᎵᏍᏓᏴᏗ ᎬᏙᏗ-ᎢᎦᏛ ᏴᏩᏁᎬ ᏄᏠᏯᏍᏛᎾ ᎯᎠ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ cultural ᎥᎦᏔᎲᎢ ᎠᏯᏍᏗ ᎠᎩᏍᏗ ᎦᏬᎯᎸᏙᏗ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏧᏕᏘᏴᏓ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎺᎵᎨ, ᎯᎠ utugi gvsv ᎾᎿ ᏎᎷ ᎠᎴ ᎾᎾᎯᏴ ᏥᏄᏍᏛᎩ ᎢᏳᏓᎵᎭ ᏓᎾᏛᏁᎵᏍᎬ. ᏌᏊ ᎢᏳᏩᎫᏗ alkali ᏧᎵᎬᏩᎳᏅᎯ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏥᏄᏍᏛᎩ ᎤᏬᎳᏨᎩ ᎠᎴ ᎢᎬᎾᏔᏅᎯ, pellagra disappeared. ᎯᎠ ᏚᏙᎳᏩᏛᎲ ᎦᎸᎳᏗ lysine ᏎᎷ ᎠᎴ ᎯᎠ ᎦᎸᎳᏗᏢ ᎠᏓᎪᏗ ᎤᏟ ᎢᎦᎢ ᏄᏘᏴᎾ ᎠᎵᏍᏓᏴᏗ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ contributed Ꮝ ᎠᏲᎱᎯᏍᏗ.
+ᎣᏂ ᏧᏩᎫᏛ ᏎᎷ ᎠᏰᎲ ᏭᏪᏙᎢ ᎬᏂᎨᏒ ᏄᏩᏁᎸ ᎾᎾᎯ ᎯᎠ ᎠᎵᏍᏓᏴᏗ ᎬᏙᏗ-ᎢᎦᏛ ᏴᏩᏁᎬ ᏄᏠᏯᏍᏛᎾ ᎯᎠ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ cultural ᎥᎦᏔᎲᎢ ᎠᏯᏍᏗ ᎠᎩᏍᏗ ᎦᏬᎯᎸᏙᏗ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏧᏕᏘᏴᏓ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎺᎵᎨ, ᎯᎠ ᎤᏚᎩ ᎬᏒ ᎾᎿ ᏎᎷ ᎠᎴ ᎾᎾᎯᏴ ᏥᏄᏍᏛᎩ ᎢᏳᏓᎵᎭ ᏓᎾᏛᏁᎵᏍᎬ. ᏌᏊ ᎢᏳᏩᎫᏗ alkali ᏧᎵᎬᏩᎳᏅᎯ ᎠᎴ ᎠᎵᏍᏓᏴᏗ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏥᏄᏍᏛᎩ ᎤᏬᎳᏨᎩ ᎠᎴ ᎢᎬᎾᏔᏅᎯ, pellagra disappeared. ᎯᎠ ᏚᏙᎳᏩᏛᎲ ᎦᎸᎳᏗ lysine ᏎᎷ ᎠᎴ ᎯᎠ ᎦᎸᎳᏗᏢ ᎠᏓᎪᏗ ᎤᏟ ᎢᎦᎢ ᏄᏘᏴᎾ ᎠᎵᏍᏓᏴᏗ ᎤᎭ ᎾᏍᎩ ᎾᏍᏇ contributed Ꮝ ᎠᏲᎱᎯᏍᏗ.
 
 == ᎠᏍᎩᎾᏗᏍᏗ ᏎᎷ ==
 === ᏨᏍᎪᏱ ᎠᏍᎩᎾᏗᏍᏗ ===
@@ -109,12 +108,12 @@
 * [[Common armyworm|ᏧᏣᏔᏊ armyworm]] (''Pseudaletia unipuncta'')
 * [[Stalk borer|ᎥᎢᏒᎢ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ]] (''Papaipema nebris'')
 * [[Corn leaf aphid|ᏎᎷ ᎤᎦᎶᎬ ᎠᏲᎶᎬ]] (''Rhopalosiphum maidis'')
-* [[European corn borer|European ᏎᎷ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ]] (''Ostrinia nubilalis'') (ECB)
+* [[European corn borer|ᏳᎳᏛ ᏎᎷ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ]] (''Ostrinia nubilalis'') (ECB)
 * [[Corn silkfly|ᏎᎷ silkfly]] (''Euxesta stigmatis'')
 * [[Lesser cornstalk borer|adatolasdisgi cornstalk ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ]] (''Elasmopalpus lignosellus'')
 * [[Corn delphacid|ᏎᎷ delphacid]] (''Peregrinus maidis'')
 
-ᎯᎠ ᎤᎳᏂᎬᎬ ᏎᎷ ᎯᎠ European ᏎᎷ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ, ᎠᎴ ᎯᎠ ᏄᎵᏍᏔᏅ ᎡᏆ ᏠᎨᏏ ᎠᏫᏒ losses, ᎤᏗᏅᏒᎩ ᎯᎠ ᏚᏙᎳᏩᏛᎲ [[transgenic plants|transgenic]] Bt ᏎᎷ ᏂᎦᏪᏍᎬ ᎯᎠ [[Bacillus thuringiensis]] (Bt) toxin. Bt ᏎᎷ ᎨᏒᎢ ᏂᎬᎢ ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎠᎴ ᎤᎭ ᏭᏪᏙᎢ ᎪᎯᏳᏔᏃᏅ ᎾᏍᎩᎾᎢ ᏣᏥᏲᎯᏍᏗ ᎭᏫᎾᏗᏢ [[Europe]].
+ᎯᎠ ᎤᎳᏂᎬᎬ ᏎᎷ ᎯᎠ European ᏎᎷ ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ, ᎠᎴ ᎯᎠ ᏄᎵᏍᏔᏅ ᎡᏆ ᏠᎨᏏ ᎠᏫᏒ losses, ᎤᏗᏅᏒᎩ ᎯᎠ ᏚᏙᎳᏩᏛᎲ [[transgenic plants|transgenic]] Bt ᏎᎷ ᏂᎦᏪᏍᎬ ᎯᎠ [[Bacillus thuringiensis]] (Bt) toxin. Bt ᏎᎷ ᎨᏒᎢ ᏂᎬᎢ ᎤᏛᏒ ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᎠᎴ ᎤᎭ ᏭᏪᏙᎢ ᎪᎯᏳᏔᏃᏅ ᎾᏍᎩᎾᎢ ᏣᏥᏲᎯᏍᏗ ᎭᏫᎾᏗᏢ [[Europe|ᏳᎳᏛ]].
 
 === ᎥᏳᎩ ===
 * [[Corn smut|ᏎᎷ ᎤᎳᏏᎬᎢ]] ᎠᎴ ᏧᏣᏔᏊ ᎤᎳᏏᎬᎢ (''Ustilago maydis''): fungal ᎥᏳᎩ, ᎤᎾᏅᏛ ᎭᏫᎾᏗᏢ [[ᎺᎯᎪ]] ᏥᏄᏍᏗ ''huitlacoche'', ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ prized ᎾᎥᎢ ᎢᎦᏛ ᏥᏄᏍᏗ ᎣᏍᏛ ᎤᏓᏂᎳᎯᎨ ᎭᏫᎾᏗᏢ ᎤᏩᏌᏊ.
@@ -126,7 +125,7 @@
 * [[Mal de Río Cuarto Virus|Mal ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Río Cuarto ᎥᏳᎩ]] (MRCV)
 
 == ᎬᏔᏂᏓᏍᏗ ᎾᏍᎩᎾᎢ ᏎᎷ ==
-ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᎴ [[ᎨᎾᏓ]], ᎯᎠ ᎢᎬᏱ ᎠᎴᏅᏗ ᎬᏙᏗ ᎾᏍᎩᎾᎢ ᏎᎷ ᎨᏒᎢ ᏥᏄᏍᏗ ᎨᎳᏍᏙᏗ ᎾᏍᎩᎾᎢ [[livestock|ganahlai]], ᎠᎵᏍᏓᏴᏗ, silage ᎠᎴ ᎤᏛᏒ ᎤᎦᏔ. [[Silage]] ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎥᎢ ᏄᎵᏂᎬᎬ chopped ᎢᏤ ᎢᏳᏍᏗ cornstalks. ᎯᎠ ᎤᏛᏒ ᎤᎦᏔ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎤᎪᏗᏗ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎬᏔᏂᏓᏍᏗ, ᎠᏠᏯᏍᏗᏍᎩ ᏧᎾᏍᏗ ᎾᎾᎯ ᏒᏃᏱ ᎡᎯ ᏅᏙ ᎠᎴ ᎤᏔᏂᏗ ᎦᏙᎯ. ᎢᎦᏛ ᎨᏒᎢ hydrolyzed ᎠᎴ enzymatically ᎠᏓᏁᎸᎯ ᎠᏛᎯᏍᏙᏗ ᏩᏚᎵᏏ, ᎾᏍᎩᎾ ᎨᏒ ᎦᎸᎳᏗ fructose [[corn syrup|ᏎᎷ ᏩᏚᎵᏏ]], sweetener, ᎠᎴ ᎢᎦᏛ ᎨᏒᎢ fermented ᎠᎴ ᏄᎵᏂᎬᎬ ᎠᏛᎯᏍᏙᏗ [[grain alcohol|ᎤᏛᏒ ᎤᎦᏔ ᎠᎹ ᎠᏑᏴᏗ ᏫᏍᎩ]]. ᎤᏛᏒ ᎤᎦᏔ ᎠᎹ ᎠᏑᏴᏗ ᏫᏍᎩ ᏂᏛᎴᏅᏓ ᏎᎷ ᎨᏒᎢ ᎧᏃᎮᎸᎯ ᎯᎠ ᏗᏓᎴᎲᏍᎬ [[bourbon whiskey|bourbon ᏫᏍᎩ]]. kanquotsegi ethanol ᎨᏒᎢ ᎠᎴᏂᏙᎲ ᎬᏔᏅᎯ ᎾᎾᎢ ᎡᎳᏗ ᎤᏓᏂᏝᏅ (10% ᎠᎴ ᎦᏲᎵᎨ) ᏥᏄᏍᏗ ᎦᏟᏐᏗᎩ ᎭᏫᎾᏗᏢ [[gasoline|ᎨᏐᎵᏂ]] ([[gasohol]]) ᎾᏍᎩᎾᎢ ᎠᏂᎩᏍᏗᏍᎩ ᎪᏛᏙᏗ ᎧᏁᏉᎩ ᎯᎠ [[octane]] ᏓᏂᎬᏩᎶᏗᏍᎬ, ᎡᎳᏗᎨ pollutants, ᎠᎴ ᎠᎦᏲᎳᏅ ᎪᎢ ᎬᏙᏗ. 
+ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᎠᎴ [[ᎨᎾᏓ]], ᎯᎠ ᎢᎬᏱ ᎠᎴᏅᏗ ᎬᏙᏗ ᎾᏍᎩᎾᎢ ᏎᎷ ᎨᏒᎢ ᏥᏄᏍᏗ ᎨᎳᏍᏙᏗ ᎾᏍᎩᎾᎢ [[livestock|ᎦᏂᏝᎢ]], ᎠᎵᏍᏓᏴᏗ, silage ᎠᎴ ᎤᏛᏒ ᎤᎦᏔ. [[Silage]] ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎥᎢ ᏄᎵᏂᎬᎬ chopped ᎢᏤ ᎢᏳᏍᏗ cornstalks. ᎯᎠ ᎤᏛᏒ ᎤᎦᏔ ᎾᏍᎩ ᎾᏍᏇ ᎤᎭ ᎤᎪᏗᏗ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎬᏔᏂᏓᏍᏗ, ᎠᏠᏯᏍᏗᏍᎩ ᏧᎾᏍᏗ ᎾᎾᎯ ᏒᏃᏱ ᎡᎯ ᏅᏙ ᎠᎴ ᎤᏔᏂᏗ ᎦᏙᎯ. ᎢᎦᏛ ᎨᏒᎢ hydrolyzed ᎠᎴ enzymatically ᎠᏓᏁᎸᎯ ᎠᏛᎯᏍᏙᏗ ᏩᏚᎵᏏ, ᎾᏍᎩᎾ ᎨᏒ ᎦᎸᎳᏗ fructose [[corn syrup|ᏎᎷ ᏩᏚᎵᏏ]], sweetener, ᎠᎴ ᎢᎦᏛ ᎨᏒᎢ fermented ᎠᎴ ᏄᎵᏂᎬᎬ ᎠᏛᎯᏍᏙᏗ [[grain alcohol|ᎤᏛᏒ ᎤᎦᏔ ᎠᎹ ᎠᏑᏴᏗ ᏫᏍᎩ]]. ᎤᏛᏒ ᎤᎦᏔ ᎠᎹ ᎠᏑᏴᏗ ᏫᏍᎩ ᏂᏛᎴᏅᏓ ᏎᎷ ᎨᏒᎢ ᎧᏃᎮᎸᎯ ᎯᎠ ᏗᏓᎴᎲᏍᎬ [[bourbon whiskey|bourbon ᏫᏍᎩ]]. ᎧᏁᏉᏤᎩ ethanol ᎨᏒᎢ ᎠᎴᏂᏙᎲ ᎬᏔᏅᎯ ᎾᎾᎢ ᎡᎳᏗ ᎤᏓᏂᏝᏅ (10% ᎠᎴ ᎦᏲᎵᎨ) ᏥᏄᏍᏗ ᎦᏟᏐᏗᎩ ᎭᏫᎾᏗᏢ [[gasoline|ᎨᏐᎵᏂ]] ([[gasohol]]) ᎾᏍᎩᎾᎢ ᎠᏂᎩᏍᏗᏍᎩ ᎪᏛᏙᏗ ᎧᏁᏉᎩ ᎯᎠ [[octane]] ᏓᏂᎬᏩᎶᏗᏍᎬ, ᎡᎳᏗᎨ pollutants, ᎠᎴ ᎠᎦᏲᎳᏅ ᎪᎢ ᎬᏙᏗ. 
 [[File:Corncobs.jpg|thumbnail|200px|Multicolored varieties ᏎᎷ]]
 
 ᏴᏫ ᎤᏲᏨᎯ ᏎᎷ ᎠᎴ [[cornmeal]] ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ [[staple food|ᏕᎬᏔᏛ ᎠᎵᏍᏓᏴᏗ]] ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᎡᎶᎯ. ᏎᎷ ᎠᎵᏍᏓᏴᏗ ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎾᎯ ᎤᎭᎨᏛ ᎠᎵᏍᏓᏴᏗ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎥᎦᏔᎲᎢ: ᏂᏛᎴᏅᏓ ᎯᎠ [[polenta]] [[Italy|ᏲᎶ]] ᎠᎴ ᎯᎠ [[mămăligă]] [[Romania]] [[mush|ᏩᏂᎨ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹᏰᏟ ᎠᎴ ᎯᎠ ᎠᎵᏍᏓᏴᏗ ᎤᏯᏅᎲ [[sadza]], [[nshima]], [[ugali]] ᎠᎴ [[mealie pap|mealie ᏂᎯ]] ᎭᏫᎾᏗᏢ ᎬᎿᎦᏍᏛ. ᎾᏍᎩ ᎨᏒᎢ ᎯᎠ ᏄᎬᏫᏳᏒ ᏑᏓᎴᎩ ᎾᏍᎩᎾᎢ [[tortilla]] ᎠᎴ ᎤᎪᏗᏗ ᏐᎢ ᏗᏖᎵᏙ [[Mexican food|ᎠᏍᏆᏂ ᎠᎵᏍᏓᏴᏗ]], ᎠᎴ ᎾᏍᎩᎾᎢ [[chicha]], fermented ᎠᎵᏍᏓᏴᏗ [[Central America|ᎠᏰᎵ ᎠᎹᏰᎵ]] ᎠᎴ [[South America|ᏧᎦᎾᏮ ᎠᎹᏰᎵ]].
@@ -135,7 +134,7 @@
 
 ᏎᎷ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ ᎠᏛᏅᎢᏍᏔᏃᏅᎯ ᏥᏄᏍᏗ [[hominy|ᎦᏃᎮᎾ]], ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏚᎷᏍᏘ ᎠᎴ bleached ᎬᏙᏗ [[lye|ᎣᎳ ᎤᎥola uvysdi]]; ᎠᎴ [[grits|ᏁᏩᏛ]], ᎦᏙ ᎤᏍᏗ ᎠᎴ bleached ᎤᏃᎮᎾ ᎦᏙᎯ ᏎᎷ. ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎦᎳᏅᎯ ᎭᏫᎾᏗᏢ [[U.S. Southern States|ᎠᎹᏰᏟ ᎤᎦᎾᏭ ᎢᏗᏢ ᎧᏃᎮᎭ]], ᎤᏂᎩᏍᏘ ᏭᏓᏁᎸᎩ ᎡᎳᏗ ᏂᏛᎴᏅᏓ [[Native Americans in the United States|ᎠᏂᏴᏫᏯ]]. ᏄᏓᎴ ᏧᏣᏔᏊ ᎠᎵᏍᏓᏴᏗ ᎪᏢᏅᎯ ᏂᏛᎴᏅᏓ ᏎᎷ ᎨᏒᎢ [[corn flakes|ᏎᎷ ᏫᏚᏳᎪᏛ]]. ᎯᎠ ᏓᏪᎳᎩᏍᎩ ᎠᎵᏍᏓᏴᏗ ([[cornflour|ᏎᎷ ᎢᏌ]] ᎠᎴ [[masa]]) ᎨᏒᎢ ᎬᏔᏅᎯ ᎪᏢᏗ [[cornbread|ᏎᎷ ᎦᏚ]] ᎠᎴ ᎠᏍᏆᏂ [[tortillas]]. Teosinte ᎨᏒᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ [[fodder|ᏎᎳᏬᏱ]], ᎠᎴ ᏰᎵᏇ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ popped ᏥᏄᏍᏗ ᎠᎾᏔᏍᎩᏍᎩ. 
 
-ᎢᎦᏛ ᏚᏙᏢᏒ ᎯᎠ ᎦᎪᏘ ᎠᎴ ᎢᏳᏓᎵᎭᏊ ᎤᏛᏒ ᎾᏍᎩᎾᎢ ᎤᏬᏚ ᎬᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏅ. ᎾᏍᎩᎾᎢ ᎪᎯ ᎤᏰᎸᏛᎢ, ᏧᏠᎯᏍᏗ ᎠᎴ coloured ᎤᎦᎶᎬ ᏚᏙᏢᏒ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎾᏍᎩ ᎬᏙᏗ colourful ᎠᏫᏗᏍᎩ ᎠᎴ ᎬᏔᏅᎯ. ᏗᎦᏟᏌᏅᎯ, ᏂᎬᎢ-ᎤᏂᎪᏗᏗ varieties, ᎤᎲᎢ ᏭᎷᏨᎩ 31 ft (9m) ᎢᏅ ᎢᎦᏘ [http://www.angelfire.com/un/giantcrops/maize.html][Evening Journal; Washington, ᎠᏯᏩ; 1946], ᎠᎴ ᎬᏙᏗ ᎠᏫᏗᏍᎩ 24 ᎢᏯᏏᏔᏗᏍᏗ ᎦᏅᎯᏓ [Journal of Heredity, 1924], ᎤᎭ ᏭᏪᏙᎢ ᎤᏂᎸᏉᏗ ᎾᏍᎩᎾᎢ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ. 
+ᎢᎦᏛ ᏚᏙᏢᏒ ᎯᎠ ᎦᎪᏘ ᎠᎴ ᎢᏳᏓᎵᎭᏊ ᎤᏛᏒ ᎾᏍᎩᎾᎢ ᎤᏬᏚ ᎬᏙᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏫᏒᏅ. ᎾᏍᎩᎾᎢ ᎪᎯ ᎤᏰᎸᏛᎢ, ᏧᏠᎯᏍᏗ ᎠᎴ coloured ᎤᎦᎶᎬ ᏚᏙᏢᏒ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎾᏍᎩ ᎬᏙᏗ colorful ᎠᏫᏗᏍᎩ ᎠᎴ ᎬᏔᏅᎯ. ᏗᎦᏟᏌᏅᎯ, ᏂᎬᎢ-ᎤᏂᎪᏗᏗ varieties, ᎤᎲᎢ ᏭᎷᏨᎩ 31 ft (9m) ᎢᏅ ᎢᎦᏘ [http://www.angelfire.com/un/giantcrops/maize.html][Evening Journal; ᏩᏏᏓᏂ, ᎠᏯᏩ; 1946], ᎠᎴ ᎬᏙᏗ ᎠᏫᏗᏍᎩ 24 ᎢᏯᏏᏔᏗᏍᏗ ᎦᏅᎯᏓ [Journal of Heredity, 1924], ᎤᎭ ᏭᏪᏙᎢ ᎤᏂᎸᏉᏗ ᎾᏍᎩᎾᎢ ᎾᎾᎢ ᎠᏂᎦᏲᎵ ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ. 
 
 {| align=right
 |-
